--- a/.hgignore
+++ b/.hgignore
@@ -1,12 +1,5 @@
 syntax: glob
-*.orig
-*.rej
-*~
-*.o
-*.svn/*
-*.DS_Store
-*.class
-*.metadata/*
-.idea/
-*.iml
-*.settings/*
+bin
+build
+
+syntax: regexp
